@@ -28,7 +28,7 @@
 enum
 {
 	INPUTTYPE_NUMERICSTRICT,
-	INPUTTYPE_ASCII,
+	INPUTTYPE_FULL_TEXT,
 	INPUTTYPE_DOSFILENAME,
 	INPUTTYPE_COORDINATE,
 	INPUTTYPE_24HOURCLOCK
